# QtDebugLog

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  main.cpp  readme.md
src/: debug_log_ctrl.cpp  debug_log_ctrl.h
